# yt-factcheck

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  assessment.md  completed-upgrades.md  docker-compose.yml  future-upgrades.md  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/: copilot-instructions.md
.github/prompts/: 01-create-requirements.md  02-create-spec.md  03-create-plan.md  04-create-tasks.md  05-implement-spec.md  06-audit-spec.md
.github/workflows/: ci.yml  deploy.yml
docs/: claims-api.md  deployment.md  evidence-api.md  pipelines-api.md  reports-api.md  scoring-api.md  transcripts-api.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ClaimList.tsx  EvidenceSection.tsx  ProgressRail.tsx  ReportViewer.tsx  SummaryCards.tsx  VerdictPanel.tsx
frontend/src/hooks/: usePipeline.ts
nginx/: nginx.conf
scripts/: deploy-vps.sh  start-api.sh  start-local.ps1
specs/001-frontend-ci/: README.md  plan.md  requirements.md  spec.md  tasks.md
src/evidencechain/: __init__.py  main.py
tests/: test_chunking.py  test_claim_api.py  test_claim_service.py  test_evidence_api.py  test_evidence_service.py  test_health.py  test_llm_providers.py  test_pipeline_orchestration.py  test_reports_api.py  test_scoring_api.py  test_scoring_service.py  test_transcript_api.py  test_transcript_service.py
(+39 files in other folders)
